hphp/hack/test/typecheck/tuple_union.php.like_types.exp
File "tuple_union.php", line 8, characters 13-14:
Invalid argument (Typing[4110])
File "tuple_union.php", line 7, characters 41-42:
Expected Ta
File "tuple_union.php", line 7, characters 24-25:
But got dynamic because it is an unenforceable type
